bluetooth: macOS: Fixing BluetoothRemoteGattDescriptorMac log description

BUG=719313

Review-Url: https://codereview.chromium.org/2869833004
Cr-Commit-Position: refs/heads/master@{#470269}

Former-commit-id: 0cafc95d595689bfde0c550c60482e2d0b67ea43